# VeilPNG-koko

./: CMakeLists.txt  README.md
VeilPNG/: CMakeLists.txt  cli_main.c  data_embed.c  data_embed.h  encryption.c  encryption.h  instructions.h  png_handler.c  png_handler.h  png_modifier.h  sveil_common.c  sveil_common.h  sveil_embed.c  sveil_embed.h  sveil_extract.c  sveil_extract.h  sveil_png_utils.c  sveil_steganography.h
compat/: CMakeLists.txt  compat.c  compat.h  tchar.h
